State right before canvas conference

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- Begin dropdown markup -->
       
       <div class="al-dropdown__container" style="position: relative;">
-        <a class="al-trigger btn" role="button" href="#"><i class="icon-hamburger" style = "font-size: 1.5rem"></i></a>
+        <a class="al-trigger btn" role="button" style = "font-size: 1.5rem" href="#"><i class="icon-hamburger" style = "font-size: 1.5rem"></i></a>
         <ul id="toolbar-1" class="al-options" role="menu" tabindex="0" aria-hidden="true" aria-expanded="false" aria-activedescendant="toolbar-2">
           <li role="presentation">
             <!--<a href="#" class="icon-edit" id="toolbar-2" tabindex="-1" role="menuitem">Edit</a> -->
@@ -84,7 +84,7 @@
 
 <!--  This is the introductory image  -->
 <div style="position: relative; width: 100%;"><img style="width: 100%;" src="https://lrccd.instructure.com/courses/22414/files/1064855/preview" alt="Photo of Circuit Board" data-api-endpoint="https://lrccd.instructure.com/api/v1/courses/22414/files/1064855" data-api-returntype="File" />
-<h1 style="position: absolute; top: 25px; left: 0; width: 100%;"><span style="color: white; font: bold 1em Helvetica, Sans-Serif; padding: 10px;">Welcome to ET 302, Introduction to Electronics!</span></h1>
+<h1 style="position: absolute; top: 25px; left: 0; width: 100%;"><span style="color: white; font: bold 1em Helvetica, Sans-Serif; padding: 10px;">Welcome to ET 302, Principles of Electricity and Electronics!</span></h1>
 </div>
 
 
